# Structured-Log-Orchestration

./: CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md
config/: 00-loglevel.conf.in
src/: main.cpp
